# cdk-apache-airflow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  airflow.cfg  cdk.json  diagram.puml  prd.md  pyproject.toml  s3_xcom_backend.py  script_backfill.sh  script_kill_standalone_airflow.sh  script_log_in_docker_ecr.sh  script_ssh_container.sh  webserver_config.py
airflows/: requirements.txt  webserver_entry.sh
dags/: .airflowignore
dags/teamclairvoyant/log-cleanup/: airflow-log-cleanup.py
dags/yokharian/: Dockerfile  __init__.py  cdk.json  cdk.py  default-requirements.txt  shareds.py
dags/yokharian/send_email/: email_dag.py
plugins/: readme.md
stack/: README.md  main.py  requirements-dev.txt
stack/constructors/: airflow_services.py  efs.py  main_airflows.py  rds.py  service_base.py
stack/constructors/core/: config.py  config_vpc.py  policies.py  utils.py
